# Amazon-best

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_engineering.yml  parameters_data_science.yml
conf/base/parameters/: data_engineering.yml  data_science.yml
notebooks/: CRISP-DM.ipynb
src/amazon_best/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/amazon_best/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
src/amazon_best/pipelines/data_science/: nodes.py  pipeline.py
src/amazon_best/pipelines/reporting/: nodes.py  pipeline.py
tests/pipelines/data_engeenering/: test_pipeline.py
